<resources>
    <string name="app_name">Feature Detail Perumahan</string>
    <string name="title_detail_perumahan">Detail Perumahan</string>
    <string name="photo_perumahan">Photo perumahan</string>
    <string name="simulasi">Simulasi</string>
    <string name="checkout">Checkout</string>
    <string name="detail_produk">Detail Produk</string>
    <string name="ukuran_">Ukuran</string>
    <string name="pondasi">Pondasi</string>
    <string name="dinding">Dinding</string>
    <string name="lantai">Lantai</string>
    <string name="plafon">Plafon</string>
    <string name="pintu_depan">Pintu Depan</string>
    <string name="dinding_kamar_mandi">Dinding Kamar Mandi</string>
    <string name="kusen">Kusen</string>
    <string name="rangkap_atap">Rankap Atap</string>
    <string name="sanitasi">Sanitasi</string>
    <string name="listrik">Listrik</string>
    <string name="air">Air</string>

    <string name="harga">Rp. %s</string>
    <string name="jumlah_unit">%d Unit</string>
    <string name="satuan_meter">%d Meter</string>
    <string name="table_body">: %s</string>
    <string name="table_body_ukuran">: %s Meter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kembali">Kembali</string>
    <string name="detail_tipe_rumah">Detail Tipe Rumah</string>
    <string name="daftar_perumahan">Daftar Perumahan</string>
    <string name="nama_perumahan">Nama Perumahan</string>
    <string name="luas_tanah">Luas Tanah</string>
    <string name="keterangan">Keterangan</string>
    <string name="title_checkout_perumahan">Checkout Perumahan</string>
    <string name="table_separate">:</string>

    <string name="field_error">%s harus diisi!</string>
    <string name="bukti_transfer_error">Silahkan masukan bukti transfer, untuk melakukan checkout!</string>
    <string name="dokumen_pengajuan_error">Silahkan masukan dokumen pengajuan, untuk melakukan checkout!</string>
    <string name="harga_properti">Harga Properti</string>
    <string name="jangka_waktu">Jangka Waktu/Tahun</string>
    <string name="suku_bunga">Suku Bunga/Tahun</string>
    <string name="uang_muka_dp_20">Uang Muka / DP 20%</string>
    <string name="jumlah_pinjaman">Jumlah Pinjaman</string>
    <string name="angsuran_per_bulan">Angsuran per bulan :</string>
    <string name="title_simulasi_kpr">Simulasi KPR</string>
    <string name="upload_dokumen_pengajuan">Upload Dokumen Pengajuan (Gambar)</string>
    <string name="checkout_berhasil">Checkout Perumahan Berhasil</string>
    <string name="message_checkout_berhasil">Checkout akan diperiksa oleh admin, silahkan ke menu history checkout untuk melihat detail checkout kamu!</string>
</resources>