<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailPerumahanFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/container_btn_action">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.afdhal_fa.imageslider.ImageSlider
                android:id="@+id/iv_perumahan"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:iss_with_title="false"
                app:iss_with_background="false"
                app:iss_image_scaleType="centerCrop"
                app:iss_placeholder="@color/cardview_dark_background"
                android:contentDescription="@string/photo_perumahan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_nama_perumahan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:layout_marginHorizontal="@dimen/small"
                android:textSize="@dimen/text_large"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/chip_jumlah_perumahan"
                app:layout_constraintTop_toBottomOf="@+id/iv_perumahan"
                tools:text="Griya Insan Utama" />

            <TextView
                android:id="@+id/tv_harga_perumahan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/small"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/chip_jumlah_perumahan"
                app:layout_constraintTop_toBottomOf="@+id/tv_nama_perumahan"
                tools:text="Rp. 2.050.000" />

            <TextView
                android:id="@+id/tv_nama_tipe_perumahan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/small"
                android:textSize="@dimen/text_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/chip_jumlah_perumahan"
                app:layout_constraintTop_toBottomOf="@+id/tv_harga_perumahan"
                tools:text="Enau - Perumahan Citra 7" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_jumlah_perumahan"
                style="@style/BaseTheme.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_perumahan"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                tools:text="100" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/small"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_nama_tipe_perumahan"/>

            <TextView
                android:id="@+id/daftar_perumahan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small"
                android:textSize="@dimen/text_medium_fit"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                android:text="@string/daftar_perumahan" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_perumahan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/small"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/daftar_perumahan"
                tools:listitem="@layout/item_detail_perumahan" />

            <View
                android:id="@+id/divider_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/small"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_perumahan"/>

            <TextView
                android:id="@+id/detail_produk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small"
                android:textSize="@dimen/text_medium_fit"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_1"
                android:text="@string/detail_tipe_rumah" />

            <TableLayout
                android:id="@+id/table_tipe_perumahan_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_produk">

                <TableRow>
                    <TextView
                        android:text="@string/ukuran_"
                        android:padding="@dimen/small" />
                    <TextView
                        android:id="@+id/tb_ukuran"
                        tools:text=": 1000"
                        android:padding="@dimen/small" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"/>

                <TableRow>
                    <TextView
                        android:text="@string/pondasi"
                        android:padding="@dimen/small" />
                    <TextView
                        android:id="@+id/tb_pondasi"
                        tools:text=": Semen"
                        android:padding="@dimen/small" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"/>

                <TableRow>
                    <TextView
                        android:text="@string/dinding"
                        android:padding="@dimen/small" />
                    <TextView
                        android:id="@+id/tb_dinding"
                        tools:text=": Semen"
                        android:padding="@dimen/small" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"/>

                <TableRow>
                    <TextView
                        android:text="@string/lantai"
                        android:padding="@dimen/small" />
                    <TextView
                        android:id="@+id/tb_lantai"
                        tools:text=": Granit"
                        android:padding="@dimen/small" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"/>

                <TableRow>
                    <TextView
                        android:padding="@dimen/small"
                        android:text="@string/plafon" />
                    <TextView
                        android:id="@+id/tb_plafon"
                        tools:text=": Sunda Plafon"
                        android:padding="@dimen/small" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"/>

                <TableRow>
                    <TextView
                        android:text="@string/pintu_depan"
                        android:padding="@dimen/small" />
                    <TextView
                        android:id="@+id/tb_pintu_depan"
                        tools:text=": Baja Ringan"
                        android:padding="@dimen/small" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"/>

                <TableRow>
                    <TextView
                        android:text="@string/dinding_kamar_mandi"
                        android:padding="@dimen/small" />
                    <TextView
                        android:id="@+id/tb_dinding_kamar_mandi"
                        tools:text=": Granit"
                        android:padding="@dimen/small" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"/>

                <TableRow>
                    <TextView
                        android:text="@string/kusen"
                        android:padding="@dimen/small" />
                    <TextView
                        android:id="@+id/tb_kusen"
                        tools:text=": Baja Ringan"
                        android:padding="@dimen/small" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"/>

                <TableRow>
                    <TextView
                        android:text="@string/rangkap_atap"
                        android:padding="@dimen/small" />
                    <TextView
                        android:id="@+id/tb_rangkap_atap"
                        tools:text=": Baja Ringan"
                        android:padding="@dimen/small" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"/>

                <TableRow>
                    <TextView
                        android:text="@string/sanitasi"
                        android:padding="@dimen/small" />
                    <TextView
                        android:id="@+id/tb_sanitasi"
                        tools:text=": Air"
                        android:padding="@dimen/small" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"/>

                <TableRow>
                    <TextView
                        android:text="@string/listrik"
                        android:padding="@dimen/small" />
                    <TextView
                        android:id="@+id/tb_listrik"
                        tools:text=": PLTA"
                        android:padding="@dimen/small" />
                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"/>

                <TableRow>
                    <TextView
                        android:text="@string/air"
                        android:padding="@dimen/small" />
                    <TextView
                        android:id="@+id/tb_air"
                        tools:text=": Sumur Bor"
                        android:padding="@dimen/small" />
                </TableRow>
            </TableLayout>

            <View
                android:id="@+id/spacer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/table_tipe_perumahan_detail"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/container_btn_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackgroundSecondary"
        app:cardElevation="@dimen/medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.ridhoafnidev.project.core_resource.components.BaseButton
                android:id="@+id/btn_simulasi"
                style="@style/BaseTheme.Button.Secondary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small"
                android:text="@string/simulasi"
                android:textAllCaps="true"
                android:layout_weight="1"/>

            <com.ridhoafnidev.project.core_resource.components.BaseButton
                android:id="@+id/btn_checkout"
                style="@style/BaseTheme.Button.Delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small"
                android:text="@string/checkout"
                android:textAllCaps="true"
                android:layout_weight="1"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>