<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SimulasiKPRActivity">

    <include
        android:id="@+id/component_toolbar"
        layout="@layout/component_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/container_kpr"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/small"
        app:layout_constraintBottom_toTopOf="@+id/container_btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/component_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_harga_property"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/small"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_harga_property"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/harga_properti"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_jangka_waktu_pinjaman"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/edt_jangka_waktu_pinjaman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/jangka_waktu"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_uang_muka"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/small"
                app:layout_constraintBottom_toBottomOf="@+id/til_suku_bunga"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_uang_muka"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/uang_muka_dp_20"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_suku_bunga"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/til_jangka_waktu_pinjaman">

                <AutoCompleteTextView
                    android:id="@+id/edt_suku_bunga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/suku_bunga"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_jumlah_pinjaman"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_suku_bunga">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_jumlah_pinjaman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/jumlah_pinjaman"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/anguran_perbulan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/small"
                android:layout_marginTop="@dimen/small"
                android:text="@string/angsuran_per_bulan"
                android:textSize="@dimen/text_medium_fit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_jumlah_pinjaman" />

            <TextView
                android:id="@+id/tv_anguran_perbulan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/small"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_medium_fit"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/anguran_perbulan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/anguran_perbulan"
                app:layout_constraintTop_toTopOf="@+id/anguran_perbulan"
                tools:text="Rp. 3.002.925" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.54" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/container_btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackgroundSecondary"
        app:cardElevation="@dimen/medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.ridhoafnidev.project.core_resource.components.BaseButton
            android:id="@+id/btn_simulasi"
            style="@style/BaseTheme.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small"
            android:layout_marginHorizontal="@dimen/small"
            android:text="@string/simulasi"
            android:textAllCaps="true" />
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>